src/ui/snapshots/state/migration/version_input/with_manual_overrides.snap
---
source: src/ui/state/migration/version_input.rs
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                             Migration Mode - Version Input                                             "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  ┌Version Number────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │v2.0.0                                                                                                            │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"  ┌Summary───────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │PRs to be tagged: 2                                                                                               │  "
"  │PRs NOT to be tagged: 1 (listed below)                                                                            │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌PRs NOT to be Tagged──────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │#102 Add analytics tracking ✅ [Manual Override - Eligible]                                                       │  " Hidden by multi-width symbols: [(32, " ")]
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  Instructions:                                                                                                         "
"  • Type your version number and press Enter to continue                                                                "
"  • Use Esc to go back to PR results                                                                                    "
"  • Use Backspace to edit your input                                                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
