src/ui/snapshots/state/migration/version_input/with_version.snap
---
source: src/ui/state/migration/version_input.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                         Migration Mode - Version Input                         "
"                                                                                "
"                                                                                "
"                                                                                "
"  ┌Version Number────────────────────────────────────────────────────────────┐  "
"  │v2.0.0                                                                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                                                                "
"  ┌Summary───────────────────────────────────────────────────────────────────┐  "
"  │PRs to be tagged: 0                                                       │  "
"  │PRs NOT to be tagged: 0 (listed below)                                    │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  ┌PRs NOT to be Tagged──────────────────────────────────────────────────────┐  "
"  │🎉 All PRs will be tagged!                                                │  " Hidden by multi-width symbols: [(4, " ")]
"  │                                                                          │  "
"  │No PRs are excluded from tagging.                                         │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"  Instructions:                                                                 "
"  • Type your version number and press Enter to continue                        "
"  • Use Esc to go back to PR results                                            "
"  • Use Backspace to edit your input                                            "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
